deployment-strategies/blue-green/blue-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: online-shop-blue
  name: online-shop-blue-deploy
  namespace: bluegreen-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: online-shop-blue
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1 #Extra pod
      maxUnavailable: 0 #Unavailable pod
  template:
    metadata:
      labels:
        app: online-shop-blue
    spec:
      containers:
        - image: amitabhdevops/online_shop
          name: online-shop-container-blue
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 25m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 20Mi
