deployment-strategies/blue-green/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen-blue
  name: bluegreen-blue-svc
  namespace: bluegreen-ns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: bluegreen-blue
