deployment-strategies/blue-green/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen-green
  name: bluegreen-green-svc
  namespace: bluegreen-ns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: bluegreen-green
