deployment-strategies/blue-green/blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-deployment-strategies
  namespace: bluegreen-ns
  annotations:
    # nginx.ingress.kubernetes.io/app-root: /home
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-shop-blue-svc
                port:
                  number: 3000
